version <unreleased>

Core
+ [utils] strip_jsonp() can recognize more patterns
* [postprocessor/ffmpeg] Fix metadata filename handling on Python 2 (#13182)

Extractors
* [youku] Fix extraction (#13191)


version 2017.05.23

Core
+ [downloader/external] Pass -loglevel to ffmpeg downloader (#13183)
+ [adobepass] Add support for Bright House Networks (#13149)

Extractors
+ [streamcz] Add support for subtitles (#13174)
* [youtube] Fix DASH manifest signature decryption (#8944, #13156)
* [toggle] Relax URL regular expression (#13172)
* [toypics] Fix extraction (#13077)
* [njpwworld] Fix extraction (#13162, #13169)
+ [hitbox] Add support for smashcast.tv (#13154)
* [mitele] Update app key regular expression (#13158)


version 2017.05.18.1

Core
* [jsinterp] Fix typo and cleanup regular expressions (#13134)


version 2017.05.18

Core
+ [jsinterp] Add support for quoted names and indexers (#13123, #13124, #13125,
  #13126, #13128, #13129, #13130, #13131, #13132)
+ [extractor/common] Add support for schemeless URLs in _extract_wowza_formats
  (#13088, #13092)
+ [utils] Recognize more audio codecs (#13081)

Extractors
+ [vier] Extract more metadata (#12539)
* [vier] Improve extraction (#12801)
    + Add support for authentication
    * Bypass authentication when no credentials provided
    * Improve extraction robustness
* [dailymail] Fix sources extraction (#13057)
* [dailymotion] Extend URL regular expression (#13079)


version 2017.05.14

Core
+ [extractor/common] Respect Width and Height attributes in ISM manifests
+ [postprocessor/metadatafromtitle] Add support regular expression syntax for
  --metadata-from-title (#13065)

Extractors
+ [mediaset] Add support for video.mediaset.it (#12708, #12964)
* [orf:radio] Fix extraction (#11643, #12926)
* [aljazeera] Extend URL regular expression (#13053)
* [imdb] Relax URL regular expression (#13056)
+ [francetv] Add support for mobile.france.tv (#13068)
+ [upskill] Add support for upskillcourses.com (#13043)